--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,8 @@ markers =
     users: Маркировка для тестов, связанных с пользователями.
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировка для тестов, связанных с аутентификацией.
+    files: Маркировка для тестов, связанных с файлами.
+
 addopts = -s -v
 
 #python -m pytest --markers
