--- a/pytest.ini
+++ b/pytest.ini
@@ -2,12 +2,13 @@
 python_files = *_tests.py test_*.py
 python_classes = Test*
 python_functions = test_*
+asyncio_mode = strict
 markers =
     users: Маркировка для тестов, связанных с пользователями.
     regression: Маркировка для регрессионных тестов.
     authentication: Маркировка для тестов, связанных с аутентификацией.
     files: Маркировка для тестов, связанных с файлами.
     courses: Маркировка для тестов, связанных с курсами.
+    exercises: Маркировка для тестов, связанных с заданиями.
 addopts = -s -v
-
 #python -m pytest --markers
