--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,52 @@
-allure-pytest==2.13.5
+allure-pytest==2.14.3
+allure-python-commons==2.14.3
+annotated-types==0.7.0
+anyio==4.9.0
+apiclient==1.0.4
+attrs==25.3.0
+cached-property==1.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+clients==1.5
+curlify2==2.0.0
+dnspython==2.7.0
 email_validator==2.2.0
-Faker==36.2.2
+execnet==2.1.1
+expiringdict==1.2.1
+Faker==37.4.0
+grpcio==1.73.0
+grpcio-tools==1.73.0
+gTTS==2.2.3
+h11==0.16.0
+httpcore==1.0.9
 httpx==0.28.1
-jsonschema==4.23.0
-pydantic==2.10.6
-pydantic-settings==2.8.1
-pytest==8.3.5
-pytest-rerunfailures==15.0
-pytest-xdist==3.6.1
-
-#pip freeze > requirements.txt
+idna==3.10
+iniconfig==2.1.0
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
+monotonic==1.6
+packaging==25.0
+pluggy==1.6.0
+protobuf==6.31.1
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.1
+pytest-asyncio==1.0.0
+pytest-xdist==3.8.0
+python-baseconv==1.2.2
+python-dotenv==1.1.1
+referencing==0.36.2
+requests==2.31.0
+rpds-py==0.25.1
+setuptools==80.9.0
+six==1.16.0
+sniffio==1.3.1
+tools==1.0.2
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==1.26.18
+websockets==15.0.1
