--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #TEST_DATA.IMAGE_PNG_FILE="/Users/msemushev/Desktop/auto/autotests-api/testdata/files/image.png"
-TEST_DATA.IMAGE_PNG_FILE="./test_data/files/image.png"
+TEST_DATA.IMAGE_PNG_FILE="TeffWL/autotests-api/blob/main/testdata/files/image.png"
 HTTP_CLIENT.URL="http://localhost:8000"
 HTTP_CLIENT.TIMEOUT=100
 
