--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,22 +11,26 @@ on:
 jobs:
   run-tests:
     runs-on: ubuntu-latest
-
     steps:
+      # 1. Клонирование репозитория
       - name: Check out repository
         uses: actions/checkout@v4
-
+      
+      # 2. Настройка Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-           python-version: '3.12'
-
+          python-version: '3.11'
+      
+      # 3. Клонирование репозитория с тестовым сервером
       - name: Clone test server repository
         run: git clone https://github.com/Nikita-Filonov/qa-automation-engineer-api-course.git
-
+      
+      # 4. Установка зависимостей для тестового сервера
       - name: Install test server dependencies
         run: pip install -r qa-automation-engineer-api-course/requirements.txt
-
+      
+      # 5. Запуск тестового сервера
       - name: Start a test server
         env:
           APP_HOST: "http://localhost:8000"
@@ -36,62 +40,36 @@ jobs:
           JWT_ACCESS_TOKEN_EXPIRE: 1800
           JWT_REFRESH_TOKEN_EXPIRE: 5184000
         run: uvicorn main:app --host 0.0.0.0 --port 8000 --app-dir ./qa-automation-engineer-api-course &
-
+      
+      # 6. Установка зависимостей проекта
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run API tests with pytest and generate Allure results
-        run: |
-          pytest -m regression
-
-      - name: Restore Coverage history
-        uses: actions/cache/restore@v4
-        with:
-          path: coverage-history.json
-          key: coverage-history-${{ github.run_id }}
-          restore-keys: |
-            coverage-history-
-
-      - name: Generate Coverage report
-        run: |
-          swagger-coverage-tool save-report
-
-      - name: Cache Coverage  history
-        if: always()
-        uses: actions/cache/save@v4
-        with:
-          path: coverage-history.json
-          key: coverage-history-${{ github.run_id }}
-
-      - name: Upload Coverage results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.html
-
-      - name: Upload Allure results
-        uses: actions/upload-artifact@v4
+      
+      # 7. Запуск тестов
+      - name: Run API tests with pytest
+        run: pytest -m regression --alluredir=allure-results --numprocesses 2
+      
+      # 8. Сохранение результатов тестов как артефакт
+      - name: Upload test results
+        uses: actions/upload-artifact@v3
         with:
           name: allure-results
           path: allure-results
 
   publish-report:
-    needs: [ run-tests ]
+    needs: [run-tests]
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Download Allure results artifact
-        uses: actions/download-artifact@v4
+      # 1. Загрузка результатов тестов
+      - name: Download test results
+        uses: actions/download-artifact@v3
         with:
           name: allure-results
           path: allure-results
-
+      
+      # 2. Получение истории отчётов
       - name: Get Allure history
         uses: actions/checkout@v4
         if: always()
@@ -99,15 +77,17 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
-
-      - name: Generate Allure Report with history
+      
+      # 3. Генерация отчёта Allure
+      - name: Generate Allure Report
         uses: simple-elf/allure-report-action@v1.12
         if: always()
         with:
           allure_results: allure-results
           allure_history: allure-history
-
-      - name: Deploy to GitHub Pages
+      
+      # 4. Публикация отчёта на GitHub Pages
+      - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4
         with:
