--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,10 +53,11 @@ jobs:
       
       # 8. Сохранение результатов тестов как артефакт
       - name: Upload test results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results
+          retention-days: 30
 
   publish-report:
     needs: [run-tests]
@@ -64,7 +65,7 @@ jobs:
     steps:
       # 1. Загрузка результатов тестов
       - name: Download test results
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: allure-results
           path: allure-results
