--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,22 +11,26 @@ on:
 jobs:
   run-tests:
     runs-on: ubuntu-latest
-
     steps:
+      # 1. Клонирование репозитория
       - name: Check out repository
         uses: actions/checkout@v4
-
+      
+      # 2. Настройка Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
+      
+      # 3. Клонирование репозитория с тестовым сервером
       - name: Clone test server repository
         run: git clone https://github.com/Nikita-Filonov/qa-automation-engineer-api-course.git
-
+      
+      # 4. Установка зависимостей для тестового сервера
       - name: Install test server dependencies
         run: pip install -r qa-automation-engineer-api-course/requirements.txt
-
+      
+      # 5. Запуск тестового сервера
       - name: Start a test server
         env:
           APP_HOST: "http://localhost:8000"
@@ -36,55 +40,54 @@ jobs:
           JWT_ACCESS_TOKEN_EXPIRE: 1800
           JWT_REFRESH_TOKEN_EXPIRE: 5184000
         run: uvicorn main:app --host 0.0.0.0 --port 8000 --app-dir ./qa-automation-engineer-api-course &
-
+      
+      # 6. Установка зависимостей проекта
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run API tests with pytest and generate Allure results
-        run: |
-          pytest -m regression --alluredir=allure-results --numprocesses 2
-
+      
+      # 7. Запуск тестов
+      - name: Run API tests with pytest
+        run: pytest -m regression --alluredir=allure-results --numprocesses 2
+      
+      # 8. Сохранение результатов тестов как артефакт
       - name: Upload test results
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
           path: allure-results
+          retention-days: 30
 
   publish-report:
-    needs: run-tests
+    needs: [run-tests]
     runs-on: ubuntu-latest
-
     steps:
-      - name: Configure Git
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global --add safe.directory /github/workspace
-
+      # 1. Загрузка результатов тестов
       - name: Download test results
         uses: actions/download-artifact@v4
         with:
           name: allure-results
-
+          path: allure-results
+      
+      # 2. Получение истории отчётов
       - name: Get Allure history
-        uses: actions/checkout@v4
+        uses: actions/checkout@ v4
         if: always()
         continue-on-error: true
         with:
-          ref: gh-pages
+          ref: gh-page 0s
           path: gh-pages
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
-
-      - name: Generates Allure Report with history
+      
+      # 3. Генерация отчёта Allure
+      - name: Generate Allure Report
         uses: simple-elf/allure-report-action@v1.12
         if: always()
         with:
           allure_results: allure-results
           allure_history: allure-history
-
+      
+      # 4. Публикация отчёта на GitHub Pages
       - name: Deploy report to Github Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4
@@ -92,7 +95,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
-          force_orphan: true
-          allow_empty_commit: true
-          keep_files: false
-          commit_message: "Deploy Allure report"
